@@ -3,8 +3,12 @@ package ma.nttdata.externals.module.offer.service.impl;
 
 
 import lombok.RequiredArgsConstructor;
+import ma.nttdata.externals.commons.exception.InternalServerException;
+import ma.nttdata.externals.commons.exception.ResourceNotFoundException;
+import ma.nttdata.externals.module.candidate.constants.LanguageLevel;
 import ma.nttdata.externals.module.candidate.entity.Candidate;
 import ma.nttdata.externals.module.candidate.entity.Language;
+import ma.nttdata.externals.module.candidate.mapper.CandidateMapper;
 import ma.nttdata.externals.module.offer.mapper.OfferCandidateMapper;
 import ma.nttdata.externals.module.candidate.repository.CandidateRepository;
 import ma.nttdata.externals.module.offer.dto.OfferCandidatesDTO;
@@ -23,66 +27,112 @@ import java.util.stream.Collectors;
 public class CandidateMatchingServImpl implements CandidateMatchingServ {
 
     private final CandidateRepository candidateRepository;
-    private final OfferCandidateMapper candidateMapper;
+    private final CandidateMapper candidateMapper;
 
     @Override
     public List<OfferCandidatesDTO> findRecommendedCandidates(OfferFormattedDescriptionDTO offer) {
-        List<Candidate> allCandidates = candidateRepository.findAll();
+        List<OfferCandidatesDTO> allCandidates = this.getAllCandidates();
+        System.out.println("Loaded candidates: " + allCandidates.size());
 
-        return allCandidates.stream()
+
+        List<OfferCandidatesDTO> filteredCandidates = allCandidates.stream()
                 .filter(candidate -> matchLanguages(candidate, offer))
-                .filter(candidate -> matchExperience(candidate, offer))
+                .filter(candidate -> matchYearsOfExperience(candidate, offer))
                 .filter(candidate -> matchMainTech(candidate, offer))
-                .sorted((c1, c2) -> Integer.compare(
-                        c2.getYearsOfExperience() != null ? c2.getYearsOfExperience() : 0,
-                        c1.getYearsOfExperience() != null ? c1.getYearsOfExperience() : 0
-                ))
-                .limit(10)
-                .map(candidateMapper::toOfferCandidatesDTO)
-                .collect(Collectors.toList());
+                .toList();
+
+        System.out.println("Candidates after language filter: " + filteredCandidates.size());
+
+        return filteredCandidates;
     }
 
     // ------------------ HARD GATES ------------------
 
-    private boolean matchLanguages(Candidate candidate, OfferFormattedDescriptionDTO offer) {
-        if (offer.languages() == null || offer.languages().isEmpty()) {
+    private boolean matchLanguages(OfferCandidatesDTO candidateDTO, OfferFormattedDescriptionDTO offerDTO) {
+        if (offerDTO.languages() == null || offerDTO.languages().isEmpty()) {
             return true;
         }
-
-        List<String> offerLanguages = offer.languages().stream()
-                .map(OfferFormattedDescriptionLanguageDTO::languageName)
-                .map(lang -> lang.toLowerCase(Locale.ROOT).trim())
-                .toList();
-
-        List<String> candidateLanguages = candidate.getLanguages().stream()
-                .map(Language::getLanguageInEnglish)
-                .map(lang -> lang.toLowerCase(Locale.ROOT).trim())
-                .toList();
-
-        return candidateLanguages.containsAll(offerLanguages);
-    }
-
-    private boolean matchExperience(Candidate candidate, OfferFormattedDescriptionDTO offer) {
-        if (candidate.getYearsOfExperience() == null) {
-            return false;
-        }
-        int candidateYears = candidate.getYearsOfExperience();
-        int requiredYears = offer.yearsOfExperience();
-
-        return candidateYears >= requiredYears;
-    }
-
-    private boolean matchMainTech(Candidate candidate, OfferFormattedDescriptionDTO offer) {
-        if (offer.mainTech() == null || offer.mainTech().isBlank()) {
-            return true;
-        }
-        if (candidate.getMainTech() == null) {
+        if (candidateDTO.languages() == null || candidateDTO.languages().isEmpty()) {
             return false;
         }
 
-        String candidateTech = candidate.getMainTech().toLowerCase(Locale.ROOT);
-        String requiredTech = offer.mainTech().toLowerCase(Locale.ROOT);
+        for (var offerLang : offerDTO.languages()) {
+            String offerName = offerLang.languageName().toLowerCase(Locale.ROOT).trim();
+            LanguageLevel offerLevel = offerLang.level();
 
-        return candidateTech.contains(requiredTech);
+            for (var candidateLang : candidateDTO.languages()) {
+                String candidateName = candidateLang.languageInEnglish().toLowerCase(Locale.ROOT).trim();
+                LanguageLevel candidateLevel = candidateLang.level();
+
+
+                if (candidateName.equals(offerName)) {
+                    if (isLevelSufficient(candidateLevel, offerLevel)) {
+
+                        return true;
+                    }
+                }
+            }
+        }
+        return false;
+    }
+
+    private boolean isLevelSufficient(LanguageLevel candidateLevel, LanguageLevel offerLevel) {
+        // relies on the enum order (BEGINNER < INTERMEDIATE < ADVANCED < NATIVE)
+        return candidateLevel.ordinal() >= offerLevel.ordinal();
+    }
+
+    private boolean matchYearsOfExperience(OfferCandidatesDTO candidateDTO, OfferFormattedDescriptionDTO offerDTO) {
+        if (offerDTO.yearsOfExperience() == 0) {
+            return true;
+        }
+        if (candidateDTO.yearsOfExperience() == null) {
+            return false;
+        }
+
+        int required = offerDTO.yearsOfExperience();
+        int candidateExp = candidateDTO.yearsOfExperience();
+
+
+        boolean match = candidateExp >= required;
+
+        return match;
+    }
+
+    private boolean matchMainTech(OfferCandidatesDTO candidateDTO, OfferFormattedDescriptionDTO offerDTO) {
+        if (offerDTO.mainTech() == null || offerDTO.mainTech().isBlank()) {
+            return true;
+        }
+        if (candidateDTO.mainTech() == null || candidateDTO.mainTech().isBlank()) {
+            return false;
+        }
+
+        String candidateTech = candidateDTO.mainTech().toLowerCase(Locale.ROOT).trim();
+        String offerTech = offerDTO.mainTech().toLowerCase(Locale.ROOT).trim();
+
+
+        boolean match = candidateTech.equals(offerTech) ||
+                candidateTech.contains(offerTech) ||
+                offerTech.contains(candidateTech);
+
+        return match;
+    }
+
+
+    private List<OfferCandidatesDTO> getAllCandidates() {
+        try {
+            List<Candidate> candidates = candidateRepository.findAll();
+
+            if (candidates.isEmpty()) {
+                throw new ResourceNotFoundException("No candidates found");
+            }
+
+            return candidates.stream()
+                    .map(candidateMapper::toOfferCandidatesDTO)
+                    .collect(Collectors.toList());
+        } catch (ResourceNotFoundException e) {
+            throw e;
+        } catch (Exception e) {
+            throw new InternalServerException("Error retrieving candidates", e);
+        }
     }
 }
